[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
ignore = ["N806", "ANN101", "D203", "D107", "D105", "D100", "D213", "D104", "PD901"]
select = ["E", "W", "F", "I", "UP", "B", "ANN", "S", "N", "SIM", "A", "ERA", "PD", "D"]

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
